// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFile should have named exports 1`] = `
Array [
  Object {
    "id": "",
    "kind": "FunctionDeclaration",
    "location": SourceLocation {
      "end": Position {
        "column": 29,
        "line": 1,
      },
      "start": Position {
        "column": 7,
        "line": 1,
      },
    },
    "markers": Array [],
    "name": "getItems",
    "path": "root/query/items.js",
  },
  Object {
    "id": "",
    "kind": "FunctionDeclaration",
    "location": SourceLocation {
      "end": Position {
        "column": 36,
        "line": 2,
      },
      "start": Position {
        "column": 7,
        "line": 2,
      },
    },
    "markers": Array [],
    "name": "getInStockCount",
    "path": "root/query/items.js",
  },
]
`;

exports[`SourceFile should have named exports 2`] = `Array []`;

exports[`SourceFile should identify markers 1`] = `
Array [
  Object {
    "id": "",
    "kind": "VariableDeclaration",
    "location": SourceLocation {
      "end": Position {
        "column": 29,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 4,
      },
    },
    "markers": Array [],
    "name": "getSessions",
    "path": "root/store/Root.js",
  },
  Object {
    "id": "",
    "kind": "FunctionDeclaration",
    "location": SourceLocation {
      "end": Position {
        "column": 1,
        "line": 10,
      },
      "start": Position {
        "column": 15,
        "line": 6,
      },
    },
    "markers": Array [
      Object {
        "filePath": "root/query/items.js",
        "location": Object {
          "end": Object {
            "column": 24,
            "line": 1,
          },
          "start": Object {
            "column": 16,
            "line": 1,
          },
        },
        "name": "getItems",
      },
      Object {
        "filePath": "project/query/items",
        "location": Object {
          "end": Object {
            "column": 36,
            "line": 2,
          },
          "start": Object {
            "column": 21,
            "line": 2,
          },
        },
        "name": "getInStockCount",
      },
      Object {
        "filePath": "root/store/Root.js",
        "location": Object {
          "end": Object {
            "column": 30,
            "line": 3,
          },
          "start": Object {
            "column": 19,
            "line": 3,
          },
        },
        "name": "getSessions",
      },
    ],
    "name": "Store",
    "path": "root/store/Root.js",
  },
]
`;

exports[`SourceFile should identify markers 2`] = `
Array [
  Object {
    "path": "root/query/items.js",
    "specifiers": Array [
      Object {
        "isDefault": true,
        "name": "getItems",
        "references": Array [
          Object {
            "code": "",
            "containerName": "Store",
            "containerType": "FunctionDeclaration",
            "location": SourceLocation {
              "end": Position {
                "column": 24,
                "line": 7,
              },
              "identifierName": "getItems",
              "start": Position {
                "column": 16,
                "line": 7,
              },
            },
          },
        ],
      },
    ],
  },
  Object {
    "path": "project/query/items",
    "specifiers": Array [
      Object {
        "isDefault": true,
        "name": "getInStockCount",
        "references": Array [
          Object {
            "code": "",
            "containerName": "Store",
            "containerType": "FunctionDeclaration",
            "location": SourceLocation {
              "end": Position {
                "column": 36,
                "line": 8,
              },
              "identifierName": "getInStockCount",
              "start": Position {
                "column": 21,
                "line": 8,
              },
            },
          },
        ],
      },
    ],
  },
]
`;
